# klusters2.0

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  config-klusters.h.cmake  config.h.in  config.status  configure  configure.in  configure.in.in  libtool  osx.txt  startup
doc/: CMakeLists.txt  Makefile.in
doc-pak/doc/: Makefile.in
doc-pak/doc/en/: Makefile.in  index.cache.bz2
doc-pak/doc/en/images/: Makefile.in
doc/en/: CMakeLists.txt  Makefile.in  index.cache.bz2  index.docbook
doc/en/html/: c1697.html  index.html  x972.html
doc/en/images/: Makefile.in
package/: configure  description-pak  make  mkpackage  mktarball  store  version
po/: CMakeLists.txt  Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  array.h  autosavethread.cpp  autosavethread.h  baseframe.cpp  baseframe.h  channelcolors.cpp  channelcolors.h  channellist.cpp  channellist.h  clusterPalette.cpp  clusterPalette.h  clusterinformationdialog.cpp  clusterinformationdialog.h  clusterpaletteiconviewitem.cpp  clusterpaletteiconviewitem.h  clusterpalettetooltip.cpp  clusterpalettetooltip.h  clustersprovider.cpp  clustersprovider.h  clusteruserinformation.h  clusterview.cpp  clusterview.h  configuration.cpp  configuration.h  correlationthread.cpp  correlationthread.h  correlationview.cpp  correlationview.h  data.cpp  data.h  dataprovider.cpp  dataprovider.h  errormatrixthread.cpp  errormatrixthread.h  errormatrixview.cpp  errormatrixview.h  eventsprovider.cpp  (+80 more)
src/cursors/: CMakeLists.txt  Makefile.in
src/icons/: CMakeLists.txt  Makefile.in
src/ui/: Makefile.in
